tests/purs/passing/ModuleDeps.purs
module Main where

import M1
import Effect.Console (log)

main = log "Done"
