tests/purs/failing/QualifierNumberStart.purs
-- @shouldFailWith ErrorParsingModule
module 0QualifierStartsWithNumber.OkModuleName where

import Effect.Console (log)

main = log "Done"
